Fix Windows dependencies SimgGear always needs "winmm" on Windows (due to timeGetTime in sgtimestamp.cxx)

--- a/utils/GPSsmooth/CMakeLists.txt
+++ b/utils/GPSsmooth/CMakeLists.txt
@@ -1,38 +1,35 @@
 
-add_executable(GPSsmooth gps.cxx gps.hxx gps_main.cxx)
-add_executable(MIDGsmooth MIDG-II.cxx MIDG-II.hxx MIDG_main.cxx)
-add_executable(UGsmooth 
+add_executable(GPSsmooth
+    gps.cxx gps.hxx
+    gps_main.cxx
+)
+
+add_executable(MIDGsmooth
+    MIDG-II.cxx MIDG-II.hxx
+    MIDG_main.cxx
+)
+
+add_executable(UGsmooth
     UGear.cxx UGear.hxx
     UGear_command.cxx UGear_command.hxx
+    UGear_telnet.cxx UGear_telnet.hxx
     UGear_main.cxx 
-    UGear_telnet.cxx
-    UGear_telnet.hxx)
+)
 
 target_link_libraries(GPSsmooth
-	${SIMGEAR_CORE_LIBRARIES}
-	${PLIB_SG_LIBRARY}
-	${PLIB_UL_LIBRARY}
-	${SIMGEAR_CORE_LIBRARY_DEPENDENCIES}
-	${ZLIB_LIBRARY}
-	${WINMM_LIBRARY}
+    ${SIMGEAR_CORE_LIBRARIES}
+    ${SIMGEAR_CORE_LIBRARY_DEPENDENCIES}
 )
 
 target_link_libraries(MIDGsmooth
-	${SIMGEAR_CORE_LIBRARIES}
-	${PLIB_SG_LIBRARY}
-	${PLIB_UL_LIBRARY}
-	${WINMM_LIBRARY}
-	${ZLIB_LIBRARY}
-	${SIMGEAR_CORE_LIBRARY_DEPENDENCIES}
+    ${SIMGEAR_CORE_LIBRARIES}
+    ${SIMGEAR_CORE_LIBRARY_DEPENDENCIES}
 )
 
 target_link_libraries(UGsmooth
-	${SIMGEAR_CORE_LIBRARIES}
-	${PLIB_SG_LIBRARY}
-	${PLIB_UL_LIBRARY}
-	${WINMM_LIBRARY}
-	${ZLIB_LIBRARY}
-	${SIMGEAR_CORE_LIBRARY_DEPENDENCIES}
+    ${SIMGEAR_CORE_LIBRARIES}
+    ${ZLIB_LIBRARY}
+    ${SIMGEAR_CORE_LIBRARY_DEPENDENCIES}
 )
 
 install(TARGETS GPSsmooth MIDGsmooth UGsmooth RUNTIME DESTINATION bin)
