#706: Properly set FLTK include directory.

--- a/utils/fgadmin/src/CMakeLists.txt
+++ b/utils/fgadmin/src/CMakeLists.txt
@@ -5,6 +5,8 @@ add_library(FGAdminUI ${FGAdminUI_FLTK_UI_SRCS})
 add_executable(fgadmin fgadmin_funcs.cxx main.cxx untarka.c)
 add_dependencies(fgadmin FGAdminUI)
 
+include_directories(${FLTK_INCLUDE_DIR})
+
 target_link_libraries(fgadmin FGAdminUI
 	${SIMGEAR_CORE_LIBRARIES}
 	${PLIB_LIBRARIES}
