scenery: Move flightgears paging back into the application.
This way of scenery paging is really application code.
Now that the simgear stg loader is seperated from the paging
code, this appication specific paging can reside here.
May be at some time also use the spt stuff here.

--- a/src/Scenery/CMakeLists.txt
+++ b/src/Scenery/CMakeLists.txt
@@ -4,6 +4,8 @@ set(SOURCES
 	SceneryPager.cxx
 	redout.cxx
 	scenery.cxx
+	tilecache.cxx
+	tileentry.cxx
 	tilemgr.cxx
 	)
 
@@ -11,8 +13,9 @@ set(HEADERS
 	SceneryPager.hxx
 	redout.hxx
 	scenery.hxx
+	tilecache.hxx
+	tileentry.hxx
 	tilemgr.hxx
 	)
-    		
-flightgear_component(Scenery "${SOURCES}" "${HEADERS}")
 
+flightgear_component(Scenery "${SOURCES}" "${HEADERS}")
