Don't create intermediate static libraries for build fgfs. (Speeds up rebuilds in Xcode dramatically, possible in other IDEs too)

--- a/src/FDM/JSBSim/CMakeLists.txt
+++ b/src/FDM/JSBSim/CMakeLists.txt
@@ -159,4 +159,4 @@ set(SOURCES
     
 include_directories(${PROJECT_SOURCE_DIR}/src/FDM/JSBSim)
 
-flightgear_component(JSBSim "${SOURCES}" "${HEADERS}")
+add_library(JSBSim STATIC ${SOURCES} ${HEADERS})
