--- a/src/FDM/YASim/CMakeLists.txt
+++ b/src/FDM/YASim/CMakeLists.txt
@@ -1,7 +1,7 @@
 include(FlightGearComponent)
 
 set(COMMON
-    Airplane.cpp
+	Airplane.cpp
 	Atmosphere.cpp
 	ControlMap.cpp
 	FGFDM.cpp
@@ -34,9 +34,9 @@ set(SOURCES
 	FGGround.cpp
 	)
 
-
 flightgear_component(YASim  "${SOURCES}")
 
+if(ENABLE_TESTS)
 add_executable(yasim yasim-test.cpp ${COMMON})
 add_executable(yasim-proptest proptest.cpp ${COMMON})
 
@@ -49,3 +49,6 @@ target_link_libraries(yasim-proptest
 		${SIMGEAR_CORE_LIBRARY_DEPENDENCIES})
 
 install(TARGETS yasim yasim-proptest RUNTIME DESTINATION bin)
+
+endif(ENABLE_TESTS)
+
