Start refactoring how FGPositioned classes are exposed to Nasal, more to come.

--- a/src/Scripting/CMakeLists.txt
+++ b/src/Scripting/CMakeLists.txt
@@ -3,10 +3,12 @@ include(FlightGearComponent)
 set(SOURCES
 	NasalSys.cxx
 	nasal-props.cxx
+    NasalPositioned.cxx
 	)
 
 set(HEADERS
 	NasalSys.hxx
+    NasalPositioned.hxx
 	)
 
 	
