Support loading PropertyList data remotely, as part of #450. Along the way, centralise the HTTPClient object so it can be used beyond the METAR download engine.

--- a/src/Network/CMakeLists.txt
+++ b/src/Network/CMakeLists.txt
@@ -11,6 +11,7 @@ set(SOURCES
 	garmin.cxx
 	generic.cxx
 	httpd.cxx
+	HTTPClient.cxx
 	joyclient.cxx
 	jsclient.cxx
 	lfsglass.cxx
@@ -38,6 +39,7 @@ set(HEADERS
 	garmin.hxx
 	generic.hxx
 	httpd.hxx
+	HTTPClient.hxx
 	joyclient.hxx
 	jsclient.hxx
 	lfsglass.hxx
