--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -151,11 +151,13 @@ if (MSVC AND MSVC_3RDPARTY_ROOT)
     if (CMAKE_CL_64)
         set( OSG_MSVC ${OSG_MSVC}-64 )
         set( MSVC_3RDPARTY_DIR 3rdParty.x64 )
+		set( BOOST_LIB lib64 )
     else (CMAKE_CL_64)
         set( MSVC_3RDPARTY_DIR 3rdParty )
+		set( BOOST_LIB lib )
     endif (CMAKE_CL_64)
 
-    set (CMAKE_LIBRARY_PATH ${MSVC_3RDPARTY_ROOT}/${MSVC_3RDPARTY_DIR}/lib ${MSVC_3RDPARTY_ROOT}/install/${OSG_MSVC}/OpenScenegraph/lib ${MSVC_3RDPARTY_ROOT}/install/${OSG_MSVC}/SimGear/lib )
+    set (CMAKE_LIBRARY_PATH ${MSVC_3RDPARTY_ROOT}/${MSVC_3RDPARTY_DIR}/lib ${MSVC_3RDPARTY_ROOT}/install/${OSG_MSVC}/OpenScenegraph/lib ${MSVC_3RDPARTY_ROOT}/install/${OSG_MSVC}/SimGear/lib $(BOOST_ROOT)/$(BOOST_LIB) )
     set (CMAKE_INCLUDE_PATH ${MSVC_3RDPARTY_ROOT}/${MSVC_3RDPARTY_DIR}/include ${MSVC_3RDPARTY_ROOT}/install/${OSG_MSVC}/OpenScenegraph/include ${MSVC_3RDPARTY_ROOT}/install/${OSG_MSVC}/SimGear/include)
     set (BOOST_ROOT         ${MSVC_3RDPARTY_ROOT}/boost_1_44_0)
     set (OPENAL_INCLUDE_DIR ${MSVC_3RDPARTY_ROOT}/${MSVC_3RDPARTY_DIR}/include)
