Make traffic-manager schedule XML loading incremental, to avoid a long pause during startup.

--- a/src/Traffic/CMakeLists.txt
+++ b/src/Traffic/CMakeLists.txt
@@ -5,5 +5,12 @@ set(SOURCES
 	Schedule.cxx
 	TrafficMgr.cxx
 	)
-	
-flightgear_component(Traffic "${SOURCES}")
+
+set(HEADERS
+	SchedFlight.hxx
+	Schedule.hxx
+	TrafficMgr.hxx
+)
+
+
+flightgear_component(Traffic "${SOURCES}" "${HEADERS}")
