--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -27,9 +27,11 @@ foreach( mylibfolder
 		Time
 		Traffic
 		FDM
+		Viewer
 		Main
-    )
+	)
 
-    add_subdirectory(${mylibfolder})
+	add_subdirectory(${mylibfolder})
+
 endforeach( mylibfolder )
 
