ATCDCL cleanup, part II. Remove/comment out obsolete code. Refactor ATCmgr(-old) into ATISmgr(-new), only keeping the COM radio / ATIS support.

--- a/src/ATCDCL/CMakeLists.txt
+++ b/src/ATCDCL/CMakeLists.txt
@@ -4,7 +4,7 @@ set(SOURCES
 	ATC.cxx
 	atis.cxx
 	ATCVoice.cxx
-	ATCmgr.cxx
+	ATISmgr.cxx
 	ATCutils.cxx
 	ATCProjection.cxx
 	)
@@ -13,7 +13,7 @@ set(HEADERS
 	ATC.hxx
 	atis.hxx
 	ATCVoice.hxx
-	ATCmgr.hxx
+	ATISmgr.hxx
 	ATCutils.hxx
 	ATCProjection.hxx
 	atis_lexicon.hxx
