Add ShivaVG sources

--- a/src/Main/CMakeLists.txt
+++ b/src/Main/CMakeLists.txt
@@ -75,7 +75,7 @@ target_link_libraries(fgfs
 	${SIMGEAR_CORE_LIBRARY_DEPENDENCIES}
 	${SIMGEAR_SCENE_LIBRARY_DEPENDENCIES}
 	${PLATFORM_LIBS}
-	OpenVG
+	ShivaVG
 )
 
 install(TARGETS fgfs RUNTIME DESTINATION bin)
