--- a/src/Main/CMakeLists.txt
+++ b/src/Main/CMakeLists.txt
@@ -64,6 +64,9 @@ if(ENABLE_JSBSIM)
     target_link_libraries(fgfs JSBSim)
 endif()
 
+include_directories(${PROJECT_SOURCE_DIR}/src/Canvas/ShivaVG/include)
+add_definitions(-DVG_API_EXPORT)
+
 target_link_libraries(fgfs
 	${SIMGEAR_LIBRARIES}
 	${OPENSCENEGRAPH_LIBRARIES}
