--- a/package/flightgear.desktop
+++ b/package/flightgear.desktop
@@ -1,7 +1,9 @@
 [Desktop Entry]
-Encoding=UTF-8
 Name=FlightGear
-Exec=artsdsp /usr/games/fgfs --geometry=1024x768 --enable-game-mode
+GenericName=Flight Simulator
+Comment=An Open Source Flight Simulator
+Exec=fgfs --geometry=1024x768
+Icon=flightgear
 Terminal=false
 Type=Application
-Icon=flightgear
+Categories=Game;Simulation;
