Update RedHat rpm spec Adapt to CMake Use shared SimGear libraries Drop separate icon (use icon from package) Update to 2.8.0 (RedHat package dependencies may still be inaccurate/incomplete)

--- a/package/RedHat/flightgear.desktop
+++ b/package/RedHat/flightgear.desktop
@@ -1,7 +1,8 @@
 [Desktop Entry]
 Encoding=UTF-8
-Name=Flight Gear
-Comment=Flight Gear Flight Simulator
+Type=Application
+Name=FlightGear
+Comment=FlightGear Flight Simulator
 Exec=fgfs
-Icon=
-Categories=GNOME;Application;Game
+Icon=flightgear
+Categories=Game;Simulation
