Canvas: Allow using canvases as PUI widgets.
 - Add new widget type canvas
 - Set canvas view dimension from the gui xml.
 - Expose mouse events to canvas widget properties.

--- a/src/GUI/CMakeLists.txt
+++ b/src/GUI/CMakeLists.txt
@@ -2,6 +2,7 @@ include(FlightGearComponent)
 
 set(SOURCES
 	AirportList.cxx
+	CanvasWidget.cxx
 	MapWidget.cxx
 	WaypointList.cxx
 	dialog.cxx
@@ -21,6 +22,7 @@ set(SOURCES
 
 set(HEADERS
 	AirportList.hxx
+	CanvasWidget.hxx
 	MapWidget.hxx
 	WaypointList.hxx
 	dialog.hxx
