Canvas: Add new element type map for geo mapping.
 - The new map element automatically transforms geo coordinates
   (lat, lon) to the according screen coordinates.
 - Currently one type of projection is supported
   (Sanson-Flamsteed projection)

--- a/src/Canvas/CMakeLists.txt
+++ b/src/Canvas/CMakeLists.txt
@@ -5,6 +5,7 @@ set(SOURCES
   canvas_mgr.cxx
   elements/element.cxx
   elements/group.cxx
+  elements/map.cxx
   elements/path.cxx
   elements/text.cxx
   property_helper.cxx
@@ -15,6 +16,7 @@ set(HEADERS
   canvas_mgr.hxx
   elements/element.hxx
   elements/group.hxx
+  elements/map.hxx
   elements/path.hxx
   elements/text.hxx
   property_helper.hxx
