Skeleton Nasal-Canvas integration.
This code is non-functional, but contains most of the stubs to show what's required to add property get/set access, convert to from ghost & C++ types, and manage ownership. Element derived classes & inheritance (e.g., methods on image/path/map elements) will follow, along with some actual functionality!

--- a/src/Scripting/CMakeLists.txt
+++ b/src/Scripting/CMakeLists.txt
@@ -4,11 +4,13 @@ set(SOURCES
 	NasalSys.cxx
 	nasal-props.cxx
     NasalPositioned.cxx
+    NasalCanvas.cxx
 	)
 
 set(HEADERS
 	NasalSys.hxx
     NasalPositioned.hxx
+    NasalCanvas.hxx
 	)
 
 	
